
2017-12-15  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: adding/removing a register now removes the reserved word
	  with the same name (if it exists) (feature request #278).
	* cobc.c (cobc_print_usage): added help text for -f(not-)register.

2017-12-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [_MSC_VER]: check if -l was specified
	  including ".lib" before adding it
	* cobc.c (process_filename): don't allocate and set fn->object for
	  most used cb_compile_level == CB_LEVEL_MODULE as it is is compiled
	  without intermediate object file
	* reserved.c (function_list): corrected number of parameters according
	  to all other checked implementations and the Programmer's Guide
	  (PRESENT-VALUE min 1->2, RANDOM max unlimited->1)

2017-12-13  Edward Hart <edward.dan.hart@gmail.com>

	* tree.h: renamed special_index to index_type and replaced magic
	  constants with (cb_index_type) enum.

2017-12-12  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (rep_name_list): handle case where $1 == cb_error_node
	  (bug #472).

2017-12-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: fix --list-registers to list these, not mnemonics...

2017-12-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: set RW VARYING clause as PENDING
	* parser.y: FR #167 added ACUCOBOL CONTROL KEY as PENDING
	* codegen.c, tree.c: fixed compiler warnings in RW code
	* field.c, ppparse.def: removed constant evaluations of pointer size
	  by using COB_64_BIT_POINTER

2017-12-11  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, field.c, parser.y: added binary-comp-1 option (feature
	  request #272).
	* pplex.l, ppparse.y: added COMP1 directive.
	* ppparse.y: removed redundant checks for well-formed literals.
	* ppparse.y: slightly improved error messages for invalid directives.
	* parser.y: added syntax checks for PAGE LIMITS clause.